--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -40,7 +40,8 @@
 
 <br>
 <div class="container is-fluid">
-  <div class="is-size-5">
+<section class="sectionbox">
+  <div class="is-size-5 has-text-weight-bold">
   <p>インフォメーション</p>
   </div>
   <br>
@@ -56,34 +57,35 @@
       </div>
     </div>
   </div>
-  <br>
-  <hr>
-  <br>
-  <div class="is-size-5">
+</section>
+<hr>
+<section class="sectionbox">
+  <div class="is-size-5 has-text-weight-bold">
   <p>管理組合専用</p>
   </div>
   <br>
   <div class="columns">
     <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="https://accounting.sophiagardens.org" target="_blank" class="black_color">会計資料</a>
+        <a href="https://accounting.sophiagardens.org" target="_blank" class="white_color">会計資料</a>
       </div>
     </div>
     <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="https://facility.sophiagardens.org" target="_blank" class="black_color">設備台帳</a>
+        <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">設備台帳</a>
       </div>
     </div>
     <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="https://repairplan.sophiagardens.org" target="_blank" class="black_color">修繕計画</a>
+        <a href="https://repairplan.sophiagardens.org" target="_blank" class="white_color">修繕計画</a>
       </div>
     </div>
-    <div class="column is-2">
+    {% comment %} <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="https://gijiroku.sophiagardens.org" target="_blank" class="black_color">議事録</a>
+        <a href="https://gijiroku.sophiagardens.org" target="_blank" class="white_color">議事録</a>
       </div>
-    </div>
+    </div> {% endcomment %}
   </div>
+</section>
 </div>
 {% endblock %}
