--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -47,13 +47,13 @@
   <br>
   <div class="columns">
     <div class="column is-2">
-      <div class="free_menubox has-text-centered">
-        <a href="{% url 'information:information' %}" class="black_color">連絡先</a>
+      <div class="menubox has-text-centered">
+        <a href="{% url 'information:information' %}" class="white_color">連絡先</a>
       </div>
     </div>
     <div class="column is-2">
-      <div class="free_menubox has-text-centered">
-        <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="black_color">パンフレット</a>
+      <div class="menubox has-text-centered">
+        <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="white_color">パンフレット</a>
       </div>
     </div>
   </div>
