--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -48,6 +48,11 @@
   <div class="columns">
     <div class="column is-2">
       <div class="menubox has-text-centered">
+        <a href="{{kisoku.src.url}}" class="white_color">基本使用規則</a>
+      </div>
+    </div>
+    <div class="column is-2">
+      <div class="menubox has-text-centered">
         <a href="{% url 'information:information' %}" class="white_color">連絡先</a>
       </div>
     </div>
