--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -6,7 +6,8 @@
 {% block navbar %}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'register:menu' %}">【メニュー】</a>
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
+      <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
