--- a/static/mycss/wh2.css
+++ b/static/mycss/wh2.css
@@ -3,3 +3,21 @@ table{
   margin: 3px;
   white-space: normal;
 }
+
+a.black_color {
+  color : black;
+  display: block;
+  }
+
+a.white_color {
+  color : white;
+  display: block;
+  }
+
+.sectionbox {
+  border: none;
+  margin-top: 2px;
+  margin-left: 10px;
+  padding: 20px;
+  position: relative;
+}
