--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -8,7 +8,7 @@
   <div class="content has-text-centered">
     <h4>区分所有者 ログイン</h4>
     <br>
-    <form method='POST' enctype='multipart/form-data' id='form_style'>
+    <form method='POST' enctype='multipart/form-data' id='login_form'>
       {{ form.non_field_errors }}
       {% for field in form %}
         <div class='field'>
