--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,10 @@
           <input type="search" class="input" placeholder="Search" name="keyword" value={{keyword}}>
           <button type="submit" class="button is-small" style="display:none"></button>
         </form>
+        <br>
+        <p>
+          <img src="{% static 'qr_code.png' %}" alt="URL" width="64" height="64">
+        </p>
       </div>
     </div>
   </main>
