--- a/notice/templates/notice/search_list.html
+++ b/notice/templates/notice/search_list.html
@@ -1,7 +1,27 @@
 {% extends "base.html" %}
 {% load static %}
 
-<!-- navbar base.html -->
+<!-- navbar -->
+{% block navbar %}
+<nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
+    {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
+    <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div id="navbarMypage" class="navbar-menu">
+    <div class="navbar-start">
+    </div>
+    <div class="navbar-end">
+      <a class="navbar-item" href="{% url 'notice:news_card' %}">戻る</a>
+    </div>
+  </div>
+</nav>
+{% endblock navbar %}
 
 {% block header %}
 <section class="hero is-dark">
@@ -13,6 +33,7 @@
   </div>
 </section>
 {% endblock %}
+
 {% block content %}
 {# 検索結果をリスト表示する #}
 <table class="table table-sm table-striped table-bordered table-responsive-sm mx-auto">
