--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -8,27 +8,27 @@
   <div class="content has-text-centered">
     <h4>区分所有者 ログイン</h4>
     <br>
-    <form method='POST' enctype='multipart/form-data' id='login_form'>
-      {{ form.non_field_errors }}
-      {% for field in form %}
-        <div class='field'>
-          <div class='control'>
-            <div class='label'>{{ field.label_tag }}</div>
-            <div class='my_field'>{{ field }}</div>
-            {% if field.help_text %}
-              <span class='helptext'>{{ field.help_text }}</span>
-            {% endif %}
-            {{ field.errors }}
-          </div>
-        </div>
-      {% endfor %}
-      {% csrf_token %}
-      <br>
-      <div class='my_button has-text-centered'>
-        <button type='submit' class='button is-primary'>読込み</button>
-        <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
-      </div>
-    </form>
   </div>
+  <form method='POST' enctype='multipart/form-data' id='form_style'>
+    {{ form.non_field_errors }}
+    {% for field in form %}
+      <div class='field'>
+        <div class='control'>
+          <div class='label'>{{ field.label_tag }}</div>
+          {% if field.help_text %}
+            <span class='helptext'>{{ field.help_text }}</span>
+          {% endif %}
+          <div class='my_field'>{{ field }}</div>
+          {{ field.errors }}
+        </div>
+      </div>
+    {% endfor %}
+    {% csrf_token %}
+    <br>
+    <div class='my_button has-text-centered'>
+      <button type='submit' class='button is-primary'>読込み</button>
+      <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
+    </div>
+  </form>
 </div>
 {% endblock %}
