--- a/static/mycss/mycss.css
+++ b/static/mycss/mycss.css
@@ -1,3 +1,4 @@
+/* mycss ver.1.0.0 */
 
 /* 固定フッタスタイル */
 html {
@@ -7,14 +8,10 @@ html {
     background-color:#ffffff;
     color:#333333;
 }
-/*
-  my_footerを使う場合、本体をmargin-bottomでfooterエリアを確保しなければならない。
-*/
+/* my_footerを使う場合、本体をmargin-bottomでfooterエリアを確保しなければならない。 */
 main {
-    /* https://ics.media/entry/200317/ */
-    /* font-family: "Helvetica Neue",Arial,"ヒラギノ角ゴシック W3","Hiragino Sans",Meiryo,sans-serif; */
     font-family: "ヒラギノ角ゴシック W4","Hiragino Sans",Meiryo,sans-serif;
-    margin-bottom: 40px; /* フッタの下側マージンの高さ */
+    margin-bottom: 40px;
 }
 /* footerだとBulmaのfooterを上書きしてしまう */
 .my_footer {
@@ -32,23 +29,6 @@ table{
   margin: 3px auto;
   white-space: nowrap;
 }
-/*
-  https://webcommu.net/phone-table-scroll/
-  scrollクラスでtable要素を囲む。
-*/
-.scroll{
-  overflow: auto;
-}
-.scroll::-webkit-scrollbar{
-  height: 8px;
-}
-.scroll::-webkit-scrollbar-track{
-  background: #F1F1F1;
-}
-.scroll::-webkit-scrollbar-thumb {
-   background: #BCBCBC;
-}
-
 /* webkit系ブラウザ用のスクロールバー調整 */
 ::-webkit-scrollbar{
   width: 10px;
@@ -62,7 +42,6 @@ table{
   border-radius: 10px;
   box-shadow: inset 0 0 0 2px #fff;
 }
-
 a.vmenu {
     text-decoration: none; 
     color:#000000; /* リンク要素のデフォルトの青を黒に */
@@ -76,7 +55,6 @@ a.vmenu:hover {
     color:#666666;
     background-color:#ffdcd7
 }
-
 /* tableの列を改行禁止にする
 td.nowrap {
   white-space: nowrap;
@@ -85,7 +63,6 @@ th {
   white-space: nowrap;
 }
 */
-
 /* 2019/08/02現在、safariでBulmaのclass = "select"が機能しないため、下記cssを使用。*/
 /* https://coliss.com/articles/build-websites/operation/css/consistent-select-element-styling.html*/
 .select-css {
@@ -112,7 +89,6 @@ th {
   background-position: right .7em top 50%, 0 0;
   background-size: .65em auto, 100%;
 }
-
 .select-css::-ms-expand {
   display: none;
 }
@@ -135,12 +111,17 @@ th {
 */
 @media screen and (min-width: 768px) {
   .md_container {
-    width: 748px;
+    /* width: 748px; */
+    width: 80%;
     margin: auto;
   }
 }
 
 /* 入力フォーム用 style sheet */
+#form_style {
+  width: 320px;
+  margin: auto;
+}
 .errorlist {
   margin: 0;
   padding: 0;
@@ -151,7 +132,7 @@ div.my_field > span.helptext {
   font-size: 14px;
   color: #999;
 }
-div.my_field > input, div.my_field > select-css, div.my_field > button {
+div.my_field input, div.my_field > select-css, div.my_field > button {
   width: 100%;
   padding: 6px 12px;
   box-sizing: border-box;
@@ -161,15 +142,4 @@ div.my_field > input, div.my_field > select-css, div.my_field > button {
 div.my_field > textarea {
   border-radius: 10px;
   border: solid 1px #999;
-}
-
-#form_style {
-  width: 480px;
-  /* width: auto; */
-  margin: auto;
-}
-
-#login_form {
-  width: 320px;
-  margin: auto;
 }
