--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -9,6 +9,7 @@
   {# css #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
+  <link href="{% static 'mycss/wh2.css' %}" rel="stylesheet">
   <title>{% block title %}マンション会計{% endblock %}</title>
   {% block head %}
   {% endblock %}
