containerクラスにwith_mobileクラスを追加

--- a/information/templates/information/information_list.html
+++ b/information/templates/information/information_list.html
@@ -38,7 +38,7 @@
   </div>
 </section>
 
-<div class="container is-fluid">
+<div class="container with_mobile">
   <div class="content">
     {% for item in information_list %}
     <p>
