--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -3,7 +3,7 @@
 ログイン
 {% endblock %}
 {% block content %}
-<div class="container is-fluid ">
+<div class="container with_mobile ">
   <br>
   <div class="content has-text-centered">
     <h4>区分所有者 ログイン</h4>
