--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
   {% endblock %}
   <br>
   <!-- contents -->
-  <div class="container is-fluid">
+  <div class="container with_mobile">
   <main>
     <div class="columns">
       <!-- 本体 -->
