--- a/static/mycss/mycss_old.css
+++ b/static/mycss/mycss_old.css
@@ -1,4 +1,4 @@
-/* mycss ver.1.1.0 */
+/* mycss ver.1.0.1 */
 
 /* 固定フッタスタイル */
 html {
@@ -22,6 +22,12 @@ main {
     height: 40px; /* ここでフッタの固定高さを設定 */
     line-height: 40px; /* ここでテキストを垂直に中央に配置 */
     background-color: #f5f5f5;
+}
+/* tableの中央配置 */
+table{
+  width: auto;
+  margin: 3px auto;
+  white-space: nowrap;
 }
 /*
  tableの列を改行禁止にする。
@@ -90,6 +96,36 @@ a.vmenu:hover {
 .select-css option {
   font-weight:normal;
 }
+/*
+ ログイン画面用
+ 320px以上ではwidthを画面の80%にする
+*/
+@media screen and (min-width: 320px) {
+  .login_container {
+    width: 80%;
+    margin: auto;
+  }
+}
+/*
+ 768px以上では強制的に320px幅とする
+*/
+@media screen and (min-width: 768px) {
+  .login_container {
+    width: 320px;
+    margin: auto;
+  }
+}
+/*
+ グラフ表示用
+ 768px以上では強制的に80%にする。
+ https://obel.hatenablog.jp/entry/20160626/1466937585 
+*/
+@media screen and (min-width: 768px) {
+  .graph_container {
+    width: 80%;
+    margin: auto;
+  }
+}
 
 /* 入力フォーム用 style sheet */
 #form_style {
@@ -130,60 +166,4 @@ div.my_field > textarea {
   background: #ccc;
   border-radius: 10px;
   box-shadow: inset 0 0 0 2px #fff;
-}
-
-/* tableの中央配置およびセル内改行を禁止のために上書きする */
-table{
-  width: auto;
-  margin: 4px auto;
-  white-space: nowrap;
-}
-
-/* ログイン画面用 */
-.login_container {
-  width: 320px;
-  margin: auto;
-}
- /* 767px以下ではwidthを80%にする */
-@media screen and (max-width: 321px) {
-  .login_container {
-    width: 80%;
-    margin: auto;
-  }
-}
-
-/* 768px以上ではmarginを16pxにする */
-@media screen and (min-width: 769px) {
-  .container.with_mobile {
-    max-width: none !important;
-    padding-left: 16px;
-    padding-right: 16px;
-    width: 100%;
-  }
-}
-/* 767px以下ではmarginを6pxにする */
-@media screen and (max-width: 768px) {
-  .container.with_mobile {
-    max-width: none !important;
-    padding-left:6px;
-    padding-right:6px;
-    width: 100%;
-  }
-}
-
-/*
- グラフ表示用
- https://obel.hatenablog.jp/entry/20160626/1466937585 
-*/
-/* 769px以上ではwidthは60% */
-.graph_container {
-  width: 70%;
-  margin: auto;
-}
-/* 768px以下ではwidthは100% */
-@media screen and (max-width: 768px) {
-  .graph_container {
-    width: 100%;
-    margin: auto;
-  }
 }
