is-fluidをwith_mobileに変更

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
           <script language="JavaScript" type="text/javascript">
             document.write(new Date().getFullYear());
           </script>
-          ソフィア・ガーデンズ川崎 管理組合 gotonorio@gmail.com (Ver-{{VERSION_NO}})
+          ソフィア・ガーデンズ川崎 管理組合 Ver-{{VERSION_NO}}. by N.Goto
         </span>
       </div>
     </div>
@@ -94,7 +94,7 @@
       // Add a click event on each of them
       $navbarBurgers.forEach( el => {
         el.addEventListener('click', () => {
-            // Get the target from the "data-target" attribute
+          // Get the target from the "data-target" attribute
           const target = el.dataset.target;
           const $target = document.getElementById(target);
           // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
