--- a/notice/templates/notice/news_form.html
+++ b/notice/templates/notice/news_form.html
@@ -14,8 +14,8 @@
     </div>
     {% csrf_token %}
     <div class="has-text-centered">
-      <button type="submit" class="button is-primary" value="send" name="action">送信する</button>
-      <button type="submit" class="button is-primary" value="send_more" name="action">送信してもう1つ追加</button>
+      <button type="submit" class="button is-danger" value="send" name="action">送信する</button>
+      <button type="submit" class="button is-danger" value="send_more" name="action">送信してもう1つ追加</button>
       <a class="button is-primary" href="javascript:void(0);" onclick="window.history.back();">戻る</a>
     </div>
   </form>
