--- a/notice/templates/notice/news_manage_list.html
+++ b/notice/templates/notice/news_manage_list.html
@@ -24,10 +24,10 @@
 {% block content %}
 <div class="container">
   <br>
-  <div class="content has-text-centered">
-    <h4 class="text-center">お知らせ一覧</h4>
+  <div class="content">
+    <h4>お知らせ一覧</h4>
     <br>
-    <a href="{% url 'notice:news_create' %}" class="button is-primary">新規作成</a>
+    <a href="{% url 'notice:news_create' %}" class="button is-danger">新規作成</a>
     <a href="{% url 'notice:news_card' %}" class="button is-primary">戻る</a>
   </div>
   <br>
