--- a/static/mycss/wh2.css
+++ b/static/mycss/wh2.css
@@ -1,8 +1,22 @@
 /* warehouseではテーブル表示を画面に納めるため、normalを指定。 */
 table{
   width: auto;
-  margin: 3px;
+  /* margin: 3px; */
+  padding: 3px;
   white-space: normal;
+}
+
+/* markdownで表の外枠表示 */
+.markdown table {
+  border: dotted 1px;
+}
+
+.is_infomation {
+  border: solid 1px;
+  margin-top: 2px;
+  margin-left: 10px;
+  padding: 10px;
+  position: relative;
 }
 
 a.black_color {
@@ -31,5 +45,18 @@ a.white_color {
   .form_container {
     width: 60%;
     margin: auto;
+  }
+}
+
+/* iPad(768px)まではmarginを20pxにする */
+.markdown {
+  overflow-x: auto;
+  margin:10px;
+}
+/* 767px以下ではmargin-leftを4pxにする */
+@media screen and (max-width: 767px) {
+  .markdown {
+    overflow-x: auto;
+    margin-left:0px;
   }
 }
