wh.css、menu.cssの整理

--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -53,7 +53,7 @@
     </div>
     <div class="column is-2">
       <div class="menubox has-text-centered">
-        <a href="{% url 'information:information' %}" class="white_color">連絡先</a>
+        <a href="{% url 'information:information' %}" class="white_color">お知らせ</a>
       </div>
     </div>
     <div class="column is-2">
