細かな修正

--- a/information/templates/information/information_list.html
+++ b/information/templates/information/information_list.html
@@ -32,7 +32,7 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title"> ソフィア・ガーデンズ川崎 </h1>
-      <h4 class="subtitle">管理組合 インフォメーション</h4>
+      <h4 class="subtitle">マンション情報</h4>
     </div>
   </div>
 </section>
