--- a/information/templates/information/information_list.html
+++ b/information/templates/information/information_list.html
@@ -41,8 +41,8 @@
   {% for item in information_list %}
   <div class="content is_infomation">
     <h4>{{ item.title }}</h4>
-    {{item.created_at|date}}
-    <div class="markdown table is-bordered is-narrow">
+    {{item.created_at|date}} <br><br>
+    <div class="table is-bordered is-narrow">
       {{item.information| markdown_to_html}}
     </div>
   </div>
