mycss.cssのアップデート

--- a/static/mycss/mycss.css
+++ b/static/mycss/mycss.css
@@ -92,10 +92,6 @@ a.vmenu:hover {
 }
 
 /* 入力フォーム用 style sheet */
-#form_style {
-  width: 320px;
-  margin: auto;
-}
 .errorlist {
   margin: 0;
   padding: 0;
@@ -137,10 +133,19 @@ div.my_field > textarea {
   width: 320px;
   margin: auto;
 }
+/* form入力style */
+#form_style {
+  width: 320px;
+  margin: auto;
+}
  /* 767px以下ではwidthを80%にする */
 @media screen and (max-width: 321px) {
   .login_container {
     width: 80%;
+    margin: auto;
+  }
+  #form_style {
+    width: 90%;
     margin: auto;
   }
 }
@@ -178,4 +183,11 @@ div.my_field > textarea {
     width: 100%;
     margin: auto;
   }
+}
+
+/* tableの中央配置 */
+.table_center_nowrap {
+  width: auto;
+  margin: 3px auto;
+  white-space: nowrap;
 }
