--- a/register/templates/register/user_list.html
+++ b/register/templates/register/user_list.html
@@ -20,6 +20,8 @@
 
   <div id="navbarMainMenu" class="navbar-menu">
     <div class="navbar-start">
+    </div>
+    <div class="navbar-end">
       <a class="navbar-item" href="{% url 'notice:news_card' %}">戻る</a>
     </div>
   </div>
