掲示板へのリンクを復活

--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -22,7 +22,7 @@
     <div class="navbar-start">
       <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
       <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
-      {% comment %} <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a> {% endcomment %}
+      <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板（テスト中）</a>
     </div>
     <div class="navbar-end">
       {% if user.username == 'sophiag' %}
