--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
   <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}/static/apple-touch-icon-precomposed.png">
 
   {# css #}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> {% endcomment %}
+  <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
   <title>{% block title %}文書資料{% endblock %}</title>
 </head>
