--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico"/>
   {# css #}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> {% endcomment %}
+  <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
   <title>{% block title %}文書資料{% endblock %}</title>
   {% block head %}
