--- a/notice/templates/notice/mobile_news_card.html
+++ b/notice/templates/notice/mobile_news_card.html
@@ -13,6 +13,7 @@
     <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
     <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
     <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
+    <a class="navbar-item" href="{% url 'overview:overview' %}">概要</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
