--- a/notice/templates/notice/pc_news_card.html
+++ b/notice/templates/notice/pc_news_card.html
@@ -23,6 +23,7 @@
       <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
       <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
       <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板（テスト中）</a>
+      <a class="navbar-item" href="{% url 'overview:overview' %}">概要（テスト中）</a>
     </div>
     <div class="navbar-end">
       {% if user.username == 'sophiag' %}
