--- a/overview/templates/overview/overview_mobile.html
+++ b/overview/templates/overview/overview_mobile.html
@@ -29,7 +29,7 @@
 {% block content %}
 <br>
 <div class="container is-fluid">
-  <div class="content has-text-centered">
+  <div class="content">
     <h4>建物概要</h4>
     <table class="table is-narrow is-responsible is-bordered">
       <tbody>
