overview表示のバグを修正

--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -38,6 +38,7 @@
           <td class="has-text-left" rowspan="5">建物概要</td>
           <td class="has-text-left">建築確認認可年月</td>
           <td class="has-text-left">{{ov.kenchiku_kakunin}}</td>
+          <td colspan="2"></td>
         </tr>
         <tr>
           <td class="has-text-left">竣工年</td>
