--- a/notice/templates/notice/pc_news_card.html
+++ b/notice/templates/notice/pc_news_card.html
@@ -44,6 +44,8 @@
               <a class="dropdown-item" href="{% url 'library:big_category_index' %}">文書ファイル登録・修正</a>
               <a class="dropdown-item" href="{% url 'information:info_list' %}">情報ファイル登録・修正</a>
               <a class="dropdown-item" href="{% url 'overview:create_room' %}">住戸データ登録・修正</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'overview:room_list' %}">住戸データ</a>
             {% endif %}
           </div>
         </div>
