住戸データの追加

--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -9,7 +9,7 @@
 {# https://bulma.io/documentation/components/navbar/ #}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item">【SG川崎】</a>
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
