--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -19,6 +19,7 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
+      <a class="navbar-item" href="{% url 'overview:roomtype_list' %}">住戸データ</a>
     </div>
     <div class="navbar-end">
       <a class="navbar-item" href="{% url 'notice:news_card' %}">戻る</a>
