--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -10,7 +10,7 @@
   {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> {% endcomment %}
   <link href="{% static 'bulma.min.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  <title>{% block title %}文書資料{% endblock %}</title>
+  <title>{% block title %}ソフィア・ガーデンズ川崎{% endblock %}</title>
   {% block head %}
   {% endblock %}
 </head>
