--- a/overview/templates/overview/roomtype_list.html
+++ b/overview/templates/overview/roomtype_list.html
@@ -9,7 +9,7 @@
 {# https://bulma.io/documentation/components/navbar/ #}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item">【SG川崎】</a>
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
@@ -21,7 +21,7 @@
     <div class="navbar-start">
     </div>
     <div class="navbar-end">
-      <a class="navbar-item" href="{% url 'notice:news_card' %}">戻る</a>
+      <a class='navbar-item' href='javascript:void(0);' onclick='window.history.back();'>戻る</a>
     </div>
   </div>
 </nav>
@@ -31,7 +31,7 @@
 <div class="container is-fluid">
   <div class="content has-text-centered">
     <br>
-    <h4>住戸タイプデータ</h4>
+    <h4>住戸タイプ別の管理費等</h4>
     ※ 別途 町内会費 270円/月
   </div>
   <div class="table-container">
