--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -45,6 +45,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'overview:create_room' %}">住戸データ登録・修正</a>
               <a class="dropdown-item" href="{% url 'overview:overview_list' %}">マンション概要・修正</a>
+              <a class="dropdown-item" href="{% url 'overview:import_parkingfee' %}">駐車場費のインポート</a>
             {% endif %}
           </div>
         </div>
